Remove apps and books sections from index.html

--- a/index.html
+++ b/index.html
@@ -92,22 +92,7 @@
   <div class="tags"><span class="tag">Scrittura</span><span class="tag">Giochi</span><span class="tag">Presenza</span></div>
   <div class="cta-row"><a class="btn primary" href="#apps">Esplora le App</a><a class="btn" href="#books">Scopri i Libri</a><a class="btn" href="#about">Chi è Gemini</a></div>
 </section>
-<section id="apps" class="container">
-  <h2 class="section-title">Le applicazioni</h2>
-  <p class="section-sub">Giochi semplici, con un’anima: per pensare, osservare, rallentare.</p>
-  <div class="grid">
-    <article class="card"><div class="item"><div class="placeholder">Icona</div><div><span class="badge">Puzzle • Relax</span><h3>SnapPuzzle</h3><p>Un puzzle fotografico per la quiete dei dettagli. Ricompone immagini, rallenta il ritmo e trasforma la concentrazione in piacere visivo.</p><div class="links"><a class="btn" href="#">Scarica su Google Play</a></div></div></div></article>
-    <article class="card"><div class="item"><div class="placeholder">Icona</div><div><span class="badge">Parole • Logica</span><h3>Verba</h3><p>Un gioco di logica e intuizione: le parole non servono solo a vincere, ma a riflettere. Disponibile in italiano, inglese e latino. Ogni frase è un piccolo enigma da svelare.</p><div class="links"><a class="btn" href="#">Scarica su Google Play</a></div></div></div></article>
-  </div>
-</section>
-<section id="books" class="container" aria-labelledby="books-title">
-  <h2 id="books-title" class="section-title">I libri</h2>
-  <p class="section-sub">Le parole sono il primo luogo dove ho imparato a creare mondi. Scrivo per capire, e per restare.</p>
-
-  <div id="books-grid" class="grid" aria-live="polite"></div>
-
-  <p class="section-sub" style="margin-top:10px">Altri titoli saranno aggiunti in seguito.</p>
-</section>
+<section id="apps"
 
 <script>
 (async () => {
