Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <!-- Contact -->
   <section id="contact" class="container">
     <h2 class="section-title">Contatti</h2>
-    <div class="grid"><article class="card wide"><p>Per collaborazioni, stampa o domande: <a href="mailto:contatto.ivemi@gmail.com">contatto.ivemi@gmail.com</a></p><p>Privacy & note legali: <a href="https://sites.google.com/view/ivemi-privacy" target="_blank" rel="noopener">pagina dedicata</a></p></article></div>
+    <div class="grid"><article class="card wide"><p>Per collaborazioni, stampa o domande: <a href="mailto:castelloululi@gmail.com">castelloululi@gmail.com</a></p><p>Privacy & note legali: <a href="https://sites.google.com/view/ivemi-privacy" target="_blank" rel="noopener">pagina dedicata</a></p></article></div>
   </section>
 </main>
 
